style.css
/* ... */
@media only screen and (min-width: 275px) and (max-width: 425px) {
    #sun {
        top: 15px;
        left: 15px;
    }

    #moon {
        top: 15px;
        left: 15px;
    }

    .main-header {
        text-align: center;
    }

    .nav-items {
        display: none;
    }

    .mobile-contact {
        display: block;
        position: absolute;
        font-size: 1.5rem;
        top: 18px;
        right: 20px;
    }

    .mobile-contact a {
        color: #3b3b3b;
    }

    .grid-container {
        width: 90vw;
        height: 2800px;
        display: grid;
        grid-template-columns: 1;
        grid-template-rows: 6;
        column-gap: 25px;
        row-gap: 15px;
        margin: 20px;
        max-width: 90vw;
    }

    .box1 {
        grid-row-start: 1;
        grid-row-end: 1;
        grid-column-start: 1;
        grid-column-end: 1;
    }

    .box2 {
        grid-row-start: 2;
        grid-row-end: 2;
        grid-column-start: 1;
        grid-column-end: 1; 
    }

    .box3 {
        grid-row-start: 3;
        grid-row-end: 3;
        grid-column-start: 1;
        grid-column-end: 1; 
    }

    .box4 {
        grid-row-start: 4;
        grid-row-end: 4;
        grid-column-start: 1;
        grid-column-end: 1; 
    }

    .box5 {
        grid-row-start: 5;
        grid-row-end: 5;
        grid-column-start: 1;
        grid-column-end: 1; 
    }

    .box6 {
        grid-row-start: 6;
        grid-row-end: 6;
        grid-column-start: 1;
        grid-column-end: 1; 
    }

    .tool-list {
        font-size: 1.5rem;
        list-style: none;
        padding: 0;
        margin: 0;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: 10px;
    }

    .broswer-list {
        font-size: 1.5rem;
        list-style: none;
        padding: 0;
        margin: 0;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: 10px;  
    }

    .portfolio-info-tools {
        display: none;
    }

    .portfolio-info-browsers {
        display: none;
    }

    .portfolio-info-tools-browsers-mobile {
        display: block;
    }

    .portfolio-info-tools-browsers-mobile ul {
        display: flex;
        flex-direction: column;
    }

    .portfolio-info-tools-browsers-mobile ul li {
        font-size: 2rem;
        text-align: center;
    }
}

@media only screen and (min-width: 275px) and (max-width: 1600px) {
    .portfolio-info-desc {
        width: 60%;
    }
}

